- reenabled bug report as configureable option (2024/04/05 MS)
- properly handle \r for levelsets made in windows (2024/04/04 MS)
- added xgettext comment to prevent wrong c-format (2024/02/14 Jorge)

1.1.6:
- unpause only with key p to allow switching windows (2024/01/13 MS)
- allow windowed mode if resolution has at least its height (2024/01/13 MS)
- added russian translation (2024/01/13 Olesya Gerasimenko)
- workaround for possible flickering when setting fullscreen (2024/01/13 Alex)
- non-blocking wait for key/confirm to workaround SDL bug (2024/01/03 MS)
- fixed more typos (2023/12/10 Jorge)

1.1.5:
- added gettext support for yes/no keys (2023/11/25 MS)
- added spanish translation (2023/11/18 Jorge)
- fixed comma typos (2023/11/18 Jorge)

1.1.4:
- bugfix: set correct fullscreen resolution for non-16:9 (2023/09/09 MS)
- fixed switched shrink/expand extras in editor (2023/09/05 MS)
- don't overwrite saved game when testing levels (2023/09/05 MS)
- properly fill new window with black (2023/09/05 MS)
- show viewport size if used on non-16:9 monitors (2023/09/05 MS)

1.1.3:
- fixed broken hiscores file check for disabled installation (2023/04/29 MS)
- updated config.guess (2023/04/29 MS)
- gettext argument set to external since now required (2023/04/29 MS)

1.1.2:
- mini game "Outbreak" now ends on appearance of 10th brick (2023/03/18 MS)
- show "Game Over" instead of congrats at end of mini game set (2023/02/18 MS)
- fixed memory violation in shine effect (2023/02/18 MS)
- use proper display settings for multiple monitors (2023/02/17 MS)
- properly link to libintl (2023/02/17 Dmitry Marakasov)
- properly install icons (2023/02/03 MS)
- use config directory as fallback for highscores (2023/01/28 MS)

1.1.1:
- added keyboard support for menu (2022/12/26 MS)
- added test functionality to editor (2022/12/24 MS)

1.1:
- added editor (2022/11/05 MS)
- added swedish translation (2022/07/22 Sanchez)

1.0.10: